Revision history for ipgrep

v0.6.1
  [Bug Fixes]
  - Specifed minimum version of Getopt::Long::Descriptive.

  [Other]
  - Renamed some variables to improve code clarity.

v0.6.0    2023-11-09 22:07:30 Europe/London
  [Enhancements]
  - Added --ignore-bad-addresses option, GH#6.

  - Added the ability to handle network ranges, GH#5.

  [Tests]
  - Added tests for gzipped files.

  [Toolchain]
  - Updated MANIFEST.SKIP.

v0.5.0    2023-11-08 21:16:30 Europe/London
  [Enhancements]
  - Added --exclude-final-dot option.

  - Added --only-matching option, GH#7.

  - Added --label option, GH#8.

v0.4.3    2023-11-08 13:15:30 Europe/London
  [Documentation]
  - Fixed grammar in the Changes.

  - Added grepcidr to SEE ALSO.

  - Fixed link for GNU grep in SEE ALSO.

  [Toolchain]
  - Added LICENSE to the MANIFEST.

  - Added MANIFEST.SKIP.

  - Added missing metadata to Makefile.PL.

v0.4.2    2023-11-07 19:23:30 Europe/London
  [Documentation]
  - Added links to git repository and bug tracker.

  [Tests]
  - Added missing data files to the MANIFEST.

v0.4.1    2023-11-07 16:51:30 Europe/London
  [Bug Fixes]
  - Fixed typo in Makefile.PL.

v0.4.0    2023-11-07 16:48:30 Europe/London
  [Enhancements]
  - Added Makefile.PL to enable easier build and installation.

  [Documentation]
  - Fixed copyright year in the LICENSE.

  - Fixed typo in Changes.

  [Other]
  - Changed shebang line of script to be ExtUtils::MakeMaker-friendly.

v0.3.0    2023-11-06 13:17:30 Europe/London
  [Enhancements]
  - Use NetAddr::IP to generate the regular expressions for specific netblocks. This implicitly adds support for IP6
    addresses (GH#1). Thanks andrew@cpan.org.

  [Tests]
  - Add more tests.

v0.2.3    2023-11-05 18:07:30 Europe/London
  [Documentation]
  - Update README from POD changes in v0.2.1.

v0.2.2    2023-11-05 18:03:30 Europe/London
  [Bug Fixes]
  - The --version option exits properly.

v0.2.1    2023-11-05 17:58:30 Europe/London
  [Documentation]